--- a/index.html
+++ b/index.html
@@ -105,21 +105,20 @@
                 <section class="projetos-section">
                     <div class="image">
                         <a href="" target="_blank">
-                            <img class="imagem-principal-eventeen" src="./assets/Imagens/Eventeen-image.svg" alt="">
+                            <img class="imagem-principal-eventeen" src="./assets/Imagens/desenvolvimento.svg" alt="">
                             <div class="image-overlay">
-                                <div class="image-title"> Eventeen!</div>
+                                <div class="image-title"> Em desenvolvimento!</div>
                                 <p class="image-description">
-                                    Confira meu projeto
                                 </p>
                             </div>
                         </a>
                     </div>
                     <span class="linha-eventeen"> </span>
-                    <h2 class="titulo"> Projeto Eventeen! </h2>
+                    <h2 class="titulo"> Em desenvolvimento!</h2>
                     <p class="texto-eventeen">
-
+                        Projeto em desenvolvimento!
                     </p>
-                    <span class="tecno-eventeen">Tecnologias sendo usadas no projeto: HTML, CSS e JavaScript.</span>
+                    <span class="tecno-eventeen">Tecnologias sendo usadas no projeto: HTML, CSS.</span>
                     <a class="linkagem" href="" target="_blank">
                         <div class="eventeen_card-button">
                             <p class="view"> View </p>
@@ -145,7 +144,7 @@
                     <p class="texto-eventeen">
                         Projeto em desenvolvimento!
                     </p>
-                    <span class="tecno-eventeen">Tecnologias sendo usadas no projeto: HTML, CSS e JavaScript.</span>
+                    <span class="tecno-eventeen">Tecnologias sendo usadas no projeto: HTML, CSS.</span>
                     <a class="linkagem" href="" target="_blank">
                         <div class="eventeen_card-button">
                             <p class="view"> View </p>
