--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
                             <div class="image-overlay">
                                 <div class="image-title"> Eventeen!</div>
                                 <p class="image-description">
-                                    Confira meu projeto
+                                    Confira meu projeto!
                                 </p>
                             </div>
                         </a>
